--- a/2sprint/chapter_doc.tex
+++ b/2sprint/chapter_doc.tex
@@ -4,3 +4,8 @@ One chapter per development cycle (i.e., one chapter per sprint) performed in th
 
 Each cycle may contain more or less of each of these elements.
 This chapter covers the “design of an application that handles a substantial part of this” and “development of a program that realizes the design”
+
+%\section{Relative to real cordiante}
+% {0;0} = {100deg 10' 10'' N; 10deg 20' 20'' E} 
+%person at relative cordinate {120; 25} 
+%Person real cordinate = {100deg 10' 11.2'' N; 10deg 20' 20.25'' E}
