--- a/bib.bib
+++ b/bib.bib
@@ -128,23 +128,21 @@
 	note = {Accessed: 25-2-2016},
 	date = {2016}
 	}
-	
-@article{triang_n_finger,
-	title={A Survey of Indoor Positioning Systems for Wireless Personal Networks},
-	author={Yanying Gu, Anthony Lo and Ignas Niemegeers},
-	journal={IEEE COMMUNICATIONS SURVEYS AND TUTORIALS},
-	volume={11},
-	number={1},
-	pages={16--17},
-	year={2009}
-}
-@article{triangulation,
+@article{fingerprint1,
 	title={Properties of Indoor Received Signal Strength for WLAN Location
 	Fingerprinting},
 	author={Kamol Kaemarungsi and Prashant Krishnamurthy},
 	journal={Telecommunications Program, School of Information Sciences, University of Pittsburgh },
 	pages={1--1},
 	year={2004}
+}
+@article{Triangualtion,
+	title={A Survey of Indoor Positioning Systems for
+	Wireless Personal Networks},
+	author={Yanying Gu, Anthony Lo, Senior Member, IEEE, and Ignas Niemegeers},
+	journal={IEEE COMMUNICATIONS SURVEYS & TUTORIALS },
+	pages={16--16},
+	year={2009}
 }
 @MISC{cisco_overview,
 	author = {Cisco},
