added intro and conclusion

--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -1,6 +1,7 @@
 \chapter{Sprint 1}
+This chapter covers the work for the first sprint in the aStep project. Seeing as the project is new, the initial focus will be to research technologies and attempt an early design for the system. As such, the goals for this sprint is explore and possibly select technologies, as well as developing an initial design of the structure of the indoor positioning service. 
 
-%This chapter covers the "design of an application that handles a substantial part of this” and “development of a program that realizes the design”
+The following chapter describes the initial steps to integrate indoor positioning into aStep.
 
 \input{1sprint/cisco.tex}
 %Alternative IPS 
@@ -8,3 +9,8 @@
 \input{1sprint/premission}
 \input{1sprint/security}
 \input{1sprint/cisco_usage}
+
+\section{Sprint evaluation}
+To conclude on the first sprint, we have explored different methods and technologies to perform indoor positioning. Furthermore we have described certain issues related to person sensitive data, and finally we developed a RESTful service to operate as an intermediate service for Cisco MSE. \sfx{initial design}
+
+As such the goals for the first sprint have been fulfilled.
