renamed file, fixed misspelled cite

--- a/1sprint/chapter_doc.tex
+++ b/1sprint/chapter_doc.tex
@@ -6,7 +6,7 @@ The following chapter describes the initial steps to integrate indoor positionin
 \input{1sprint/cisco.tex}
 %Alternative IPS 
 %se what we did in cisco 
-\input{1sprint/premission}
+\input{1sprint/permission}
 \input{1sprint/security}
 \input{1sprint/cisco_usage}
 
