--- a/bib.bib
+++ b/bib.bib
@@ -136,7 +136,7 @@
 	pages={1--1},
 	year={2004}
 }
-@article{Triangualtion,
+@article{Triangulation,
 	title={A Survey of Indoor Positioning Systems for
 	Wireless Personal Networks},
 	author={Yanying Gu, Anthony Lo, Senior Member, IEEE, and Ignas Niemegeers},
