--- a/bib.bib
+++ b/bib.bib
@@ -137,10 +137,9 @@
 	year={2004}
 }
 @article{Triangulation,
-	title={A Survey of Indoor Positioning Systems for
-	Wireless Personal Networks},
-	author={Yanying Gu, Anthony Lo, Senior Member, IEEE, and Ignas Niemegeers},
-	journal={IEEE COMMUNICATIONS SURVEYS & TUTORIALS },
+	title={A Survey of Indoor Positioning Systems for Wireless Personal Networks},
+	author={Yanying Gu, Anthony Lo and Ignas Niemegeers},
+	journal={IEEE COMMUNICATIONS SURVEYS AND TUTORIALS, VOL. 11},
 	pages={16--16},
 	year={2009}
 }
