rewrote the section

--- a/bib.bib
+++ b/bib.bib
@@ -173,3 +173,15 @@
 	note = {Accessed 2-3-2016},
 	url = {\url{https://docs.oracle.com/javase/7/docs/api/java/util/TreeSet.html}}
 }
+@MISC{dimensions,
+	author = {Cisco},
+	title = {Three Dimensions that Influence Location Quality},
+	note = {Accessed 2-3-2016},
+	url = {\url{http://blogs.cisco.com/wireless/three-dimensions-that-influence-location-quality}}
+}
+@MISC{tracking_approaches,
+	author = {Cisco},
+	title ={Location Tracking Approaches},
+	note = {Accessed 2-3-2016},
+	url = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/WiFiLBS-DG/wifich2.html}}
+}
