Started on writing the gitlab section under coloboration. (10%)

--- a/collaboration/collaboration.tex
+++ b/collaboration/collaboration.tex
@@ -15,3 +15,5 @@ At least two topic focused chapters describing common activities performed with 
 	\item Usability; usability design, usability test
 	\item Test and verification; integration test, acceptance test, regression testing, protocol verification
 \end{itemize}
+
+\input{collaboration/gitlab}
