Wrote a little more on the gitlab section and also on the wiki page for updating gitlab.

--- a/collaboration/Gitlab.tex
+++ b/collaboration/Gitlab.tex
@@ -3,10 +3,9 @@ From the aSTEP meeting that toke place 17.02.2016 it was decided that a few peop
 
 We toke on the task of updating the GitLab that was running on our aSTEP virtual server, this will from now on be refereed to as aSTEP server. The magnitude of this task involves installing a virtual server on one of our groups computer to emulate the GitLab update to ensure that if it fails to update, we will not course any problems to the aSTEP server running GitLab. Later in the process we discovered some problems with this approach.
 
-Installing the ubuntu-server version 13.04 went well, creating the backup image of the gitlab server was a little more difficult, but mainly because of our inexperience with ubuntu commands, which is the only option when working with an ubuntu-server. Similar problems occurred when we needed to retrieve the backup files from the aSTEP server, this were solved using a subprogram of PuTTY which is called PSCP is allow us to send or retrieve files from remote machines. The last problem that arrived was installing the gitlab version, the exact package used on aSTEP is gitlab-ce\_8.4.4-ce.0\_amd64.deb which i only usable on a amd system thus making it impossible for our group to continue this emulation. 
+Installing the ubuntu-server version 13.04 went well, creating the backup image of the gitlab server was a little more difficult, but mainly because of our inexperience with ubuntu commands, which is the only option when working with an ubuntu-server. Similar problems occurred when we needed to retrieve the backup files from the aSTEP server, this were solved using a subprogram of PuTTY which is called PSCP is allow us to send or retrieve files from remote machines. The last problem that arrived was installing the gitlab version, the exact package used on aSTEP is gitlab-ce\_8.4.4-ce.0\_amd64.deb which i only usable on a amd system thus making it seemingly impossible for our group to continue this emulation.  
 
-Alternatives to testing if the update is doable on our aSTEP server could be done in a number of other ways, here is a two recommendation that we pass along the persons that will continue on this, solution number one is to ask the It Services (ITS) to take a snapshot of the aSTEP server, a snapshot is a way of saving the virtual machines state, this enables us to restore the virtual machine state to of when the snapshot was created, by doing this we will be able to run the update on the aSTEP server and if anything goes wrong we will be able to restore the aSTEP server to is previous state. The first solution has some downfalls, the process of saving the snapshot, updating gitlab and loading a snapshot can be time consuming and while this is happening nobody will be able to saved their work on GitLab, worst case scenario would be that some group might lose the work they have done because of this. The second solution involves also using snapshot, first ask the ITS to setup another virtual and load it using the snapshot from taken from the aSTEP server, then we will be able to test if there is any complications with the update and it would not be able to effect the aSTEP server. 
-
+We described the problem we had encountered on Slack and shortly after Rune from the OutDoor group, that is also a part of the GitLab group had a solution to the problem. The solution to the problem can be found at the aSTEP wiki so future groups do not encounter the same problem. After this we were able to test updating GitLab on our virtual server and did not encounter any problems, a guide for this can also be found on aSTEP wiki to help future development.
 
 \subsection{PSCP}
 PSCP was used to communicate between aSTEPs server and also with our own virtual machine. the commands for PSCP is pretty straight forward, if you are using windows, you open your command prompt and go to the folder where PSCP is located or you add it to your environment, we ended up placing the PSCP.exe on the c drive. Afterwards two commands was used to either retrieve or send files like shown in 
