--- a/2sprint/chapter_doc.tex
+++ b/2sprint/chapter_doc.tex
@@ -1,9 +1,6 @@
 \chapter{Sprint 2}
+In this chapter we describe the work done in the second sprint. Since it have been chosen to utilize Cisco, which is available to us at Aalborg University, the main goal for this sprint is to make the connection and send data from Cisco to the aStep database, as can be seen in \cref{fig:cisco_systems}. There will also be focused on unit testing the code and taken time to describe our collaboration with the other groups assigned to the aStep project.
 
-One chapter per development cycle (i.e., one chapter per sprint) performed in the project documenting the analysis, design, refactoring, implementation and test performed in that cycle.
-
-Each cycle may contain more or less of each of these elements.
-This chapter covers the “design of an application that handles a substantial part of this” and “development of a program that realizes the design”
 
 %\section{Relative to real cordiante}
 % {0;0} = {100deg 10' 10'' N; 10deg 20' 20'' E} 
