This section is almost done

--- a/bib.bib
+++ b/bib.bib
@@ -179,6 +179,24 @@
 	note = {Accessed 2-3-2016},
 	url = {\url{http://blogs.cisco.com/wireless/three-dimensions-that-influence-location-quality}}
 }
+@MISC{zonith,
+	author = {Zonith},
+	title = {IPS - INDOOR POSITIONING SYSTEM},
+	note = {Accessed 7-3-2016},
+	url = {\url{http://zonith.com/products/ips/}}
+}
+@MISC{redpin,
+	author = {Redpin},
+	title = {what is redpin?},
+	note = {Accessed 7-3-2016},
+	url = {\url{http://redpin.org/index.html}}
+}
+@MISC{googleindoormaps,
+	author = {Google},
+	title = {Google Indoor Maps},
+	note = {Accessed 7-3-2016},
+	url = {\url{https://www.google.com/maps/about/partners/indoormaps/}}
+}
 @MISC{tracking_approaches,
 	author = {Cisco},
 	title ={Location Tracking Approaches},
