--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -44,24 +44,27 @@ The location patterning category sets out to measure the connectivity patterns f
 \subsection{Evaluation dimensions}
 When evaluating indoor location services there are three dimensions that have to be considered: location precision, refresh rate and system latency. Location precision tells us about the location precision that the system affords. Refresh rate is the rate at which the location is updated, and as such how closely the most recent data is related to real-time data. System latency is a dimension describing the time it takes to perform the positioning calculations\cite{dimensions}. Depending on the usage of the system, the dimensions can be valued using a scale of importance, such as "High", "Medium" and "Low". Alternatively we can chose to look for systems with one or more dimensions below a set value. For example, we have a desire to find a system with a location precision lower than the average precision for GPS. 
 
-The three dimensions are in no way constant for a system. For most systems, the hardware has a large influence on the dimensions. Location precision is severely diminished if the environment lacks access points. Refresh rate depends on how often mobile devices communicate with the network and system latency can be impacted by a large amount of noise on the WI-FI channels. Naturally corporations developing indoor positioning services use their best results to advertise for their product. As such, the values supplied from official advertising sources are best-case values. However, if we assume this is the case for all products, we can use these values as a basis for comparison.
+The three dimensions are in no way constant for a system. For most systems, the hardware has a large influence on the dimensions. Location precision is severely diminished if the environment lacks access points. Refresh rate depends on how often mobile devices communicate with the network and system latency can be impacted by a large amount of noise on the WI-FI channels. Naturally corporations developing indoor positioning services use their best results to advertise for their product. As such, the values supplied from official advertising sources are best-case values. However, if we assume this is the case for all products, we can use these values as a basis for comparison. \sfx{Might want to delete last three sentences. These dimensions are not a standard, and as such it is hard to find these numbers for all systems.}
 
 %What does google do?
 \subsection{Technologies}
-In this section we examine some systems that aStep can use to integrate indoor positioning.
+In this section we examine some systems using different tracking approaches that aStep can use to integrate indoor positioning.
 
-Zonith Indoor Positioning System is a system that uses the Cell of Origin approach. As mentioned in \cref{sec:tracking_approach}, this technique requires auxiliary hardware. Zonith offers Bluetooth Beacons, which serve as checkpoint nodes, and allow for any device with Bluetooth to be discovered and tracked.
-%http://zonith.com/products/ips/
+Zonith Indoor Positioning System is a system that uses the Cell of Origin approach. As mentioned in \cref{sec:tracking_approach}, this technique requires auxiliary hardware. Zonith offers Bluetooth Beacons, which serve as checkpoint nodes, and allow for any device with Bluetooth to be discovered and tracked\cite{zonith}. The system is not evaluated based on the three dimensions. This is because of the nature of the approach; we can expect the location precision to be excellent at the moment a device is registered. However, the most recent registration of a device is a weak approximation of its location, at best it tells us what room the device is in.
 
-Google presents one possible system. They have made indoor navigation and tracking possible trough their Indoor Maps project \cite{IPSoverGPS}, which lets users map a building by uploading a floor plan of said building. After the floor plan has been accepted, the system will request information about the location of the WI-FI access points in the building. By doing so, the system is able to triangulate using the access points as static reference points and combine that information with the GPS location, thereby utilising both technologies to get a more precise position of the device than by using GPS only.
+Redpin is an open source indoor positioning system that uses location patterning. The system requires a calibration phase, where the connectivity fingerprint of different key locations is measured. A users location is calculated on request, and the system will be able to provide the user with at least room-level accuracy\cite{redpin}. Loation precision is as such dependent on the calibration phase, but is expected in a decent environment to be better than a cell of origin approach. 
 
-%About Cisco
-Cisco has developed a location-aware wireless network system, the Cisco Unified Wireless Network(UWN), which utilises WI-FI triangulation\cite{CiscoTri} and other wireless communication protocols in order to develop indoor location based services\cite{uwn}.
-Cisco utilizes the Cisco Mobility Services Engine (MSE) for their system. The MSE makes it possible for Cisco to track the location of up to 25000 network devices at once. It is the MSE that does the calculations to position devices using the data it receives from the access-points\cite{ciscoMSE}.
-The building is modelled by the use of an outline of the floor plan. The image will be converted to a coordinate system that is placed on top of the model which is then supplied with the positions of the access points that are set up in the building. From there it is possible to get the relative position of any nearby devices in relation to the origin of a coordinate system. It is these positions that will be used in order to track and analyse wireless devices.
+Google has also developed their own positioning system. They have made indoor navigation and tracking possible trough their Indoor Maps project \cite{IPSoverGPS}, which lets users map a building by uploading a floor plan of said building. After the floor plan has been accepted, the system will request information about the location of the WI-FI access points in the building\cite{googleindoormaps}. A user can then see their own location on Google maps at any time, as long as the GPS is turned on for the device. Google have been very secretive in regards to what tracking approach they use, as such it is difficult to evaluate the technology.
 
-\subsection{Choice of technology}\label{subsec:cisco}
-Due to RFID not being able to position devices at any time, but is rather able to indicate where a device was last registered, it is not optimal for the applications currently being designed. It have therefore been chosen to use a WI-FI based system.
-At the university we have access to a sever that runs the Cisco UWN (MSE) software, which is set up to monitor every building on campus at Aalborg University. We have chosen to use the data that is available from here as it is comprehensible to set the system up in a new environment.
+Cisco has developed a location-aware wireless network system, Cisco Mobility Services Engine (MSE), which utilises WI-FI triangulation\cite{CiscoTri}. The MSE makes it possible for Cisco to track the location of up to 25000 network devices at once, regardless of whether the devices are connected to the network. Using the RSSI data from the access points, the Cisco controller calculates distance and compares time of arrival to perform a triangulation and obtain a position\cite{ciscoMSE}.
+The building is modelled by the use of an outline of the floor plan. The image is converted to a coordinate system that is placed on top of the model, which is then supplied with the positions of the static access points in the building. With this information it is possible to get the relative position of any device in relation to the origin of the coordinate system. It is these relative positions that are used to track wireless devices.
+Cisco claims to have a location precision of less than a meter, refresh rate of 10-120 updates per minute and a system latency of 2-4 seconds\cite{dimensions}. 
 
-%How do we solve the previous stated problems
+\subsection{Choice of Technology}\label{subsec:cisco}
+We have presented four technologies using different tracking approaches. We impose two requirements for the technology. First, we largely prefer a system with an accurate location precision. In practice this means being able to position people within rooms, as indoor environments can differ greatly in room size. For instance, an airport is difficult to partition into rooms, as it normally exhibits very open spaces. Secondly, we wish to harvest as much data, in terms of positions, as possible. This allows for predictions on crowd movements, pathing around crowded areas and analysing typical movement in a building. 
+
+Our first requirement excludes the Zonith Indoor Positioning System. To accommodate the second requirement, we examine the obtainable data from the systems. Redpin affords the possibility to request the position of a single device. Given that it is open source, it might be possible to alter the system in such a way that all devices on the network is provided. Google Indoor Maps only allows requesting a single user. Cisco MSE has the functionality to provide a list of devices registered along with their most recent position.
+
+There are several arguments pointing towards Cisco MSE rather than Redpin. First and foremost, Cisco MSE is in comparison a lot more convenient, as it already affords the desired functionality and requires substantially less set-up time. Secondly, the amount of documentation for Cisco MSE far outweighs what little documentation there is for Redpin. Cisco MSE is a commercial system, and is therefore updated regularly. As of 7/3/2016, Redpin had its most recent update in May 2013. As a consequence of these arguments we chose to integrate Cisco MSE as the indoor positioning system for aStep.
+
+Aalborg University uses the standard version of Cisco MSE to position devices on their network. We plan on using the data available from this system as dummy data for the aStep project.
