--- a/bib.bib
+++ b/bib.bib
@@ -1,4 +1,4 @@
-@article{indoor_bin,
+﻿@article{indoor_bin,
   title={Indoor-A New Data Management Frontier.},
   author={Jensen, Christian S and Lu, Hua and Yang, Bin},
   journal={IEEE Data Eng. Bull.},
@@ -202,4 +202,10 @@
 	title ={Location Tracking Approaches},
 	note = {Accessed 2-3-2016},
 	url = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/WiFiLBS-DG/wifich2.html}}
+}
+@MISC{gitlab_guide,
+	author = {GitLab},
+	title = {Install a GitLab CE Omnibus package on Ubuntu 14.02},
+	note = {Accessed 8-3-2016},
+	url = {\url{https://about.gitlab.com/downloads/#ubuntu1404}}
 }
