GitLab section changes

--- a/collaboration/Gitlab.tex
+++ b/collaboration/Gitlab.tex
@@ -1,9 +1,9 @@
 \section{GitLab}
 From the aSTEP meeting that toke place 17.02.2016 it was decided that a few people across the groups should take responsibility for maintaining the gitlab server. Two members of our group volunteered for this task. The section purpose is to describe the work that our group has done related to GitLab.
 
-Our first task were to update the GitLab that was running on semesters virtual server, this will from now on be refereed to as aSTEP server. The magnitude of this task involves installing a virtual server on one of our groups computer to emulate the GitLab update to ensure that if it fails to update, we will not course any problems to the aSTEP server running GitLab. Early in the process we discovered some problems with this approach.
+Our first task is to update the GitLab that is running on semesters virtual server, this will from now on be refereed to as aSTEP server. The magnitude of this task involves installing a virtual server on one of our groups computer to emulate the GitLab update to ensure that if it fails to update, it will not course any problems to the aSTEP server running GitLab.
 
-Installing GitLab were a bit more difficult then first anticipated, this were caused because GitLab run on a 64-bit architecture and the software VirtualBox only showed the option for installing 32-bit system. A solution was found that involves change the following setting on our machine; turn on Intel (R) Virtualization Technology and Intel (R) VT-d Feature in Basic Input Output System (BIOS), afterwards you need to disable Hyper-V in Windows Features and after the machine have restarted and updated the setting VirtualBox will now show the option for 64-bit.
+Installing GitLab is a bit more difficult then first anticipated, this were caused because GitLab run on a 64-bit architecture and the software VirtualBox only showed the option for installing 32-bit system. A solution was found that involves change the following setting on our machine; turn on Intel (R) Virtualization Technology and Intel (R) VT-d Feature in Basic Input Output System (BIOS), afterwards you need to disable Hyper-V in Windows Features and after the machine have restarted and updated the setting VirtualBox will now show the option for 64-bit.
 
 The next step in this process is to install GitLab, we used the guide from GitLab own website\cite{gitlab_guide}, this had no major complications.
 
