--- a/bib.bib
+++ b/bib.bib
@@ -209,3 +209,9 @@
 	note = {Accessed 8-3-2016},
 	url = {\url{https://about.gitlab.com/downloads/#ubuntu1404}}
 }
+@MISC{vbox,
+	author = {Oracle},
+	title = {VirtualBox},
+	note = {Accessed 8-3-2016},
+	url = {\url{https://www.virtualbox.org/}}
+}
