--- a/bib.bib
+++ b/bib.bib
@@ -215,3 +215,9 @@
 	note = {Accessed 8-3-2016},
 	url = {\url{https://www.virtualbox.org/}}
 }
+@MISC{putty,
+	author = {PuTTY},
+	title = {PuTTY Download Page},
+	note = {Accessed 8-3-2016},
+	url = {\url{http://www.chiark.greenend.org.uk/~sgtatham/putty/download.html}
+}
